@@ -24,7 +24,6 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.FileOutputStream;
-import java.io.FileWriter;
 import java.io.PrintWriter;
 import java.util.Iterator;
 import java.util.jar.Attributes;
@@ -32,61 +31,16 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
 
-import org.apache.hadoop.fs.FileSystem;
-import org.apache.hadoop.fs.Path;
-import org.apache.pig.ExecType;
 import org.apache.pig.PigServer;
 import org.apache.pig.builtin.mock.Storage;
 import org.apache.pig.data.Tuple;
-import org.junit.AfterClass;
-import org.junit.Before;
 import org.junit.Test;
 
 public class TestPigServerWithMacros {
-    private static MiniGenericCluster cluster = MiniGenericCluster.buildCluster();
-
-    @Before
-    public void setup() throws Exception {
-        Util.resetStateForExecModeSwitch();
-    }
-
-    @AfterClass
-    public static void tearDown() throws Exception {
-        cluster.shutDown();
-    }
-
-    @Test
-    public void testRegisterRemoteMacro() throws Throwable {
-        PigServer pig = new PigServer(cluster.getExecType(), cluster.getProperties());
-
-        String macroName = "util.pig";
-        File macroFile = File.createTempFile("tmp", "");
-        PrintWriter pw = new PrintWriter(new FileWriter(macroFile));
-        pw.println("DEFINE row_count(X) RETURNS Z { Y = group $X all; $Z = foreach Y generate COUNT($X); };");
-        pw.close();
-
-        FileSystem fs = cluster.getFileSystem();
-        fs.copyFromLocalFile(new Path(macroFile.getAbsolutePath()), new Path(macroName));
-
-        // find the absolute path for the directory so that it does not
-        // depend on configuration
-        String absPath = fs.getFileStatus(new Path(macroName)).getPath().toString();
-
-        Util.createInputFile(cluster, "testRegisterRemoteMacro_input", new String[]{"1", "2"});
-
-        pig.registerQuery("import '" + absPath + "';");
-        pig.registerQuery("a = load 'testRegisterRemoteMacro_input';");
-        pig.registerQuery("b = row_count(a);");
-        Iterator<Tuple> iter = pig.openIterator("b");
-
-        assertEquals(2L, ((Long)iter.next().get(0)).longValue());
-
-        pig.shutdown();
-    }
 
     @Test
     public void testInlineMacro() throws Throwable {
-        PigServer pig = new PigServer(ExecType.LOCAL);
+        PigServer pig = new PigServer(Util.getLocalTestMode());
 
         Storage.Data data = resetData(pig);
         data.set("some_path", "(l:chararray)", tuple("first row"), tuple("second row"));
@@ -103,7 +57,7 @@ public class TestPigServerWithMacros {
 
     @Test
     public void testRegisterResourceMacro() throws Throwable {
-        PigServer pig = new PigServer(ExecType.LOCAL);
+        PigServer pig = new PigServer(Util.getLocalTestMode());
 
         String macrosFile = "test/pig/macros.pig";
         File macrosJarFile = File.createTempFile("macros", ".jar");
