@@ -28,6 +28,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4354: Port local mode tests to Tez - part3 (daijy)
+
 PIG-4338: Fix test failures with JDK8 (rohini)
 
 PIG-4351: TestPigRunner.simpleTest2 fail on trunk (daijy)
